static/css/style.css
/* https://coolors.co/app/d3f8e2-e4c1f9-f694c1-ede7b1-a9def9 */

html,body {
    height: 100%;
}

@media (min-width: 1400px) {
    .container{
        width: 1300px;
    }
}


.background {
    background-color: #ffffff;
    /*background: url("../images/Capture.PNG");*/
    /*background: url("https://www.colourbox.com/preview/8223315-pattern-with-waving-curls-similar-to-winter-frost.jpg");*/
    /*background-size: 33%;*/
/*    background-color: #f2e3fa;*/
/*background-image: url("http://www.transparenttextures.com/patterns/light-grey-floral-motif.png");*/
/* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
}

.main_image {
    box-shadow: 8px 8px 10px #aaa;
    border: 4px double #AAA;
    width: 80%;
    display: block;
    margin: 0 auto;
}

.image_contain {
    height: 100%;
    /*background-color: #CCCCCC*/
}

@media all and (orientation:portrait) {
	.main_image {
		content: url("https://photos.smugmug.com/Proposal/i-PhStjhH/0/X2/019_KS_IMG_5009_019-X2.jpg");
	}
	.hidden-portrait {
        display: none;
    }
}
@media all and (orientation:landscape) {
	.main_image {
		content: url("https://photos.smugmug.com/Proposal/i-FjmHJQQ/0/O/013_TB_IMG_0933-2_013.jpg");
	}
	.hidden-landscape {
    display: none;
    }
}

.fl {
    float: left;
}

.inline-block {
    display: inline-block;
}

.center_text {
    text-align: center;
}

.body_contain {
    /*background: url(subtle_white_mini_waves.png);*/
    height: 100vh;
    width: 80%;
    margin-left: 10%;
    margin-right: 10%;

    /*border-radius: 20px;*/
    /*border: 1px solid gray;*/
}

.heading_container {
    width: 82%;
}

.heading, .navbar_heading {
    font-family: 'Dancing Script', cursive;
    display: inline-block;
}

.navbar_heading {
    color: #000;
    padding-left: 15px;
}

.heading {
    font-size: 6em;
    padding-left: 20px;
    padding-right:20px;
    margin-top: 5px;
}

.elephant {
    margin-top: 15px;
}

.row {
    padding-top: 20px;
}

@media (max-width: 1250px) {
    .heading {
        font-size: 4em;
    }

    .elephant {
        margin-top: 0px;
    }

    .heading_container {
        width: 79%;
    }
}

@media (max-width: 1000px) {
    .heading {
        font-size: 3em;
    }

    .elephant {
        margin-top: -7px;
    }

    .heading_container {
        width: 73%;
    }

    .navbar_heading {
        padding-top: 15px;
    }

    .nav > li > a > h3 {
        font-size: 21px;
    }
}

@media (max-width: 340px) {
    .navbar_heading {
        font-size: 1.4em;
        background-color: blue;
    }

    .navbar_date {
        font-size: 1.2em;
    }
}

@media (min-width: 340px) {
    .navbar_heading {
        font-size: 1.6em;
    }

    .navbar_date {
        font-size: 1.3em;
    }
}

.nav > li > a {
    padding-top: 0px !important;
    padding-bottom: 0px !important;
}

.nav > li > a > h3 {
    margin-top: 12.5px;
}

.fr {
    float: right;
}

.navbar_heading.fr {
    position: absolute;
    right: 55px;
}

.container-fluid {
    padding-left: 0px;
    padding-right: 0px;
}

/* Colors */
.pastel_green {
    background-color: #C8EDA6;
}

.pastel_lavender {
    background-color: #E4C1F9;
}

.pastel_pink {
    background-color: #F4A1C8;
}

.pastel_yellow {
    background-color: #FFFFA8;
}

.pastel_blue {
    background-color: #A9DEF9;
}

.pastel_orange {
    background-color: #FFB754;
}

.light_lavender {
    background-color: #E4C1F9;
}

.pastel_green_light {
    background-color: rgba(200, 237, 166, 0.6);
}

.pastel_lavender_light {
    background-color: rgba(228, 193, 249, 0.6);
}

.pastel_pink_light {
    background-color: rgba(244, 161, 200, 0.6);
}

.pastel_yellow_light {
    background-color: rgba(255, 255, 168, 0.6);
}

.pastel_blue_light {
    background-color: rgba(169, 222, 249, 0.6);
}

.pastel_orange_light {
    background-color: rgba(255, 183, 84, 0.6);
}

.ivory {
    /*background-color: #FFFFF0;*/
    /*background: url(ivory_texture.png);*/
    /*background-color: #E9E4E1;*/
}

.background_color {
    background-color: #CFEBF9;
    /*background-image: url(park.jpg);*/
    /*background-size: cover;*/
}

.white_text {
    color: white;
}

.navbar-nav {
    width: 100%;
    margin: 0px;
}

.navbar-collapse {
    padding-left: 0px;
    padding-right: 0px;
}

.navbar-brand {
    padding: 0px;
    padding-left:10px;
}

.right_edge {
    border-right-width: 1px;
}

.left_edge {
    border-left-width: 1px;
}

.navbar-nav>li:not(.left_edge) {
    border-left-width: 0px;
}

.navbar-nav>li {
    /*box-shadow: inset 0 0 2.5em 0.1em #BBBBBB;*/
    /*border-top-width: 1px;*/
    /*border-bottom-width: 1px;*/
    /*border-right-width: 1px;*/
    /*border-style: solid;*/
    /*border-color: #666;*/
}

.navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:focus, .navbar-default .navbar-nav>.open>a:hover {
    background-color: inherit;
}

.navbar-default {
    background-color: inherit;
}

.navbar-default .navbar-nav .open .dropdown-menu>li>a, .navbar-default .navbar-nav>li>a {
    color: #000;
}

.u-max-full-width {
    max-width: 100%;
    box-sizing: border-box;
}

.navbar {
    margin-bottom: 0;
    border: none;
}

.navbar-default {
    margin-bottom: 10px;
}

.navbar-toggle {
    border: 0px;
    padding-right: 15px;
}

.navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover {
    background-color: inherit;
}

.no_link, .no_link:visited, .no_link:hover, .no_link:active, .no_link:link {
    color: inherit;
    text-decoration: inherit;
}

.no_link:hover {
    color: inherit;
    text-decoration: inherit;
}

.no_link:visited {
    color: inherit;
    text-decoration: inherit;
}

.gallery_frame {
    margin-top: 20px;
}

.sm-gallery-header {
    display: none;
}

.blurb img {
    width: 600px;
}

#topnav li {
    padding-left: 0px;
    padding-right: 0px;
}

.menu-trigger {
    position: absolute;
    top: 10px;
}

/*Make the navbar into a sticky-top navbar for mobile*/
/*http://stackoverflow.com/a/36175204*/
@media (max-width: 767px) {
    body {
        margin-top: 50px;
    }
    .navbar-default {
        position: fixed;
        z-index: 1030;
        right: 0;
        left: 0;
        border-radius: 0;
        top: 0;
        border-width: 0 0 1px;
        width: 100%;
        padding-bottom: 20px;
    }

    .col-sm-2 {
        width: 50%;
        float: left;
    }

    .topnav_spacing {
        padding-top: 20px;
    }

    .main_image {
        width: 100%;
    }
}

@media (min-width: 768px) {
    .sticky_top {
        position: fixed;
        left: 50%;
        transform: translate(-50%, 0);
        background-color: inherit;
        z-index: 1000
    }

    .topnav_spacing {
        padding-top: 200px;
    }
}

body {
    font-family: 'Montserrat', sans-serif;
    font-weight: 400;
}

h3 {
    font-size: 23px;
}

/* Content blocks */
.content_block {
    margin-top: 20px;
    padding: 10px 60px 10px 60px;
    color: #000000;
    -webkit-box-shadow: 0 0 10px 2px #999;
    -moz-box-shadow: 0 0 10px 2px #999;
    box-shadow: 0 0 10px 2px #999;
}
.content_block>.row {
    padding-top: 0px;
}

.content_block_heading {
    width: 100%;
    margin-top: 0px;
    margin-bottom: -10px;
    font-family: 'Courgette', cursive;
}
.heading_line {
    border-top: 1px solid black;
}
.inner_content_block {
    margin: 0 auto;
    width: 90%;
}
.content_block>.content_block {
    margin: 5px;
}

@media (min-width: 768px) {
    .content_block_heading {
        font-size: 5em;
    }
    .info_section_header {
        font-size: 3em;
    }
    .info_section_content {
        font-size: 2em;
    }
}

@media (max-width: 768px) {
    .content_block_heading {
        font-size: 2.5em;
    }
    .info_section_header {
        font-size: 2em;
    }
    .info_section_content {
        font-size: 1.25em;
    }
}

/* https://www.itsupportguides.com/tech-tips-tricks/how-to-offset-anchor-tag-link-using-css/ */
/* Offset for anchor links to account for the sticky header */
:target:before {
    content:"";
    display:block;
    height:175px; /* fixed header height*/
    margin:-175px 0 0; /* negative fixed header height */
}

.hotel_logo {
    height: 80px;
    padding: 3px;
}

.registry_logo {
    max-height: 100px;
    max-width: 300px;
    padding-left: 10px;
    padding-right: 10px;
}

.justify {
    text-align: justify;
}

.pointer {
    cursor: pointer;
}

